# QB12_MLOps_HW3

./: .dockerignore  .env.example  .gitignore  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  docker-compose.yml  pyproject.toml  requirements.txt
k8s/: deployment.yaml  secret.yaml  service.yaml
reports/: docker_size_report.md
src/: pyproject.toml
src/airbnb_serving/: app.py  predictor.py  schema.py
src/airbnb_serving.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
